# center-invest

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  aiosqlite.py  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_000001_initial_backend.py  20260404_000002_training_gameplay.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: attempts.py  auth.py  health.py  profile.py  progress.py  rating.py  scenarios.py  ws.py
backend/app/core/: attempt_events.py  config.py  database.py  enums.py  redis.py  security.py  websocket.py
backend/app/data/: scenarios.json
backend/app/models/: __init__.py  base.py  progress.py  reputation.py  scenario_gameplay.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  profile.py  progress.py  rating.py  scenario_gameplay.py
backend/app/services/: __init__.py  auth.py  profile.py  progress.py  rating.py  reputation.py  scenario_gameplay.py
backend/app/web/: index.html
backend/center-invest_case-master/: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/center-invest_case-master/backend/: .gitignore  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py  seed_data.py
backend/center-invest_case-master/backend/1st_part/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  (+1 more)
backend/tests/: __init__.py  test_api_smoke.py  test_rating_logic.py  test_scenario_gameplay.py
(+50 files in other folders)
